[OE-3658] Fixed sub-elements spacing

--- a/css/style_new.css
+++ b/css/style_new.css
@@ -4474,23 +4474,24 @@ tfoot.pagination-container .pagination li {
 /* line 1, ../sass/new/openeyes/components/events/_sub-elements.scss */
 .sub-elements {
   padding-top: 0;
+  padding-bottom: 0;
 }
-/* line 4, ../sass/new/openeyes/components/events/_sub-elements.scss */
+/* line 5, ../sass/new/openeyes/components/events/_sub-elements.scss */
 .sub-elements.inactive {
   padding: 0;
   margin-bottom: 10px;
 }
+/* line 9, ../sass/new/openeyes/components/events/_sub-elements.scss */
+.sub-elements:empty {
+  padding: 0;
+}
 
-/* line 14, ../sass/new/openeyes/components/events/_sub-elements.scss */
+/* line 18, ../sass/new/openeyes/components/events/_sub-elements.scss */
 .sub-element {
   border: 1px solid #fafafa;
-  margin-bottom: 0.625em;
+  margin-bottom: 10px;
 }
-/* line 17, ../sass/new/openeyes/components/events/_sub-elements.scss */
-.sub-element:last-child {
-  margin-bottom: 0;
-}
-/* line 20, ../sass/new/openeyes/components/events/_sub-elements.scss */
+/* line 21, ../sass/new/openeyes/components/events/_sub-elements.scss */
 .sub-element .sub-element-title {
   font-style: normal;
   color: #666;
@@ -4499,29 +4500,29 @@ tfoot.pagination-container .pagination li {
   margin: 0;
   float: left;
 }
-/* line 28, ../sass/new/openeyes/components/events/_sub-elements.scss */
+/* line 29, ../sass/new/openeyes/components/events/_sub-elements.scss */
 .sub-element .element-eye {
   border-top: 1px solid #fafafa;
 }
 
-/* line 33, ../sass/new/openeyes/components/events/_sub-elements.scss */
+/* line 34, ../sass/new/openeyes/components/events/_sub-elements.scss */
 .sub-element-header {
   background: #fafafa;
 }
 
-/* line 43, ../sass/new/openeyes/components/events/_sub-elements.scss */
+/* line 44, ../sass/new/openeyes/components/events/_sub-elements.scss */
 .edit .sub-element-actions {
   padding: 0.0625em 0.125em 0 0;
 }
-/* line 49, ../sass/new/openeyes/components/events/_sub-elements.scss */
+/* line 50, ../sass/new/openeyes/components/events/_sub-elements.scss */
 .edit .sub-element-fields > .field-row:last-child, .edit .sub-element-fields > .data-row:last-child {
   padding: 0;
 }
-/* line 53, ../sass/new/openeyes/components/events/_sub-elements.scss */
+/* line 54, ../sass/new/openeyes/components/events/_sub-elements.scss */
 .edit .sub-element-fields .element-eye > .field-row:last-child, .edit .sub-element-fields .element-eye > .data-row:last-child {
   padding: 0;
 }
-/* line 60, ../sass/new/openeyes/components/events/_sub-elements.scss */
+/* line 61, ../sass/new/openeyes/components/events/_sub-elements.scss */
 .edit .sub-elements-list li {
   margin-bottom: 10px;
 }
